--- a/index.css
+++ b/index.css
@@ -28,12 +28,19 @@ body {
     margin: 0;
 }
 
+.web-banner {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    background-color: black;
+}
+
 .header {
     font-size: 24px;
     display: flex;
     justify-content: center;
     font-weight: bold;
-    background-color: #4E8098;
     color: white;
     height: 100px;
     align-items: center;
@@ -45,11 +52,10 @@ body {
 }
 
 .app-container {
+    margin-top: 100px;
     display: flex;
     align-items: center;
     flex-flow: column;
-    height: 100vh;
-    background-color: #FCF7F8;
 }
 
 .content-container {
